2005-02-18  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.19 "chives" is released.

2005-02-01  Vin Shelton  <acs@xemacs.org>

	* automated/regexp-tests.el: Added test for stale match data with
	shy groups authored by Arnaud Giersch <arnaud.giersch@free.fr>

2005-01-13  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el:
	Test trivial subpatterns and backreferences with shy groups.

2004-10-28  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/os-tests.el: New file.  Add tests for bug reported by
	Katsumi Yamaoka 2004-10-26 <b9yvfcyuscf.fsf@jpl.org>.  Test
	suggested by Katsumi Yamaoka <b9yoeipvwn0.fsf@jpl.org>.

2004-10-22  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.18 "chestnut" is released.

2004-10-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add tests for bug identified by Steve
	Youngs 2004-09-30 <microsoft-free.87ekkjhj7t.fsf@youngs.au.com>.

2004-09-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/regexp-tests.el: Add tests for bug identified by
	Katsumi Yamaoka 2004-09-03 <b9ywtzbbpue.fsf_-_@jpl.org>.

2004-05-14  Stephen J. Turnbull  <stephen@xemacs.org>

	* automated/tag-tests.el (first form): Put non-ASCII chars back.

2004-05-13  Jerry James  <james@xemacs.org>

	* automated/lisp-tests:el: Another test fix because
	(eq most-negative-fixnum (- most-negative-fixnum)).

2004-05-11  Vin Shelton  <acs@xemacs.org>

	* automated/tag-test.el: Use a temp directory to avoid conflicts
	with extra TAGS files.

2004-05-08  Vin Shelton  <acs@xemacs.org>

	* automated/tag-test.el: Created.

2004-04-21  Jerry James  <james@xemacs.org>

	* automated/test-harness.el (Assert): Add an optional failing-case
	arg so we can see what the test was trying to do when it failed.
	* automated/lisp-tests.el: Use the failing-case arg for Asserts
	with variables.  Use eql on tests that might produce bignums.  Fix
	test for non-bignum XEmacsen that fails because